--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/ui": "^2.10.0",
+    "@nuxtjs/color-mode": "^3.3.0",
+    "@nuxtjs/supabase": "^1.1.3",
     "nuxt": "^3.8.0",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
